package temp;

/**
 * Created by MF17037 on 2017/12/05.
 */

public interface UDPHolePanchingFinishListener {
    void onUDPHolePanchingFinish();
}
