package temp;

/**
 * Created by MF17037 on 2017/12/04.
 */

public interface UDPHolePunchingServerSendListener {
    void onSendFinishMsg();
}
