@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class temp.Main {
        {static} + main()
        + onUDPHolePanchingFinish()
        - start()
    }
  }
  

  namespace  {
    interface temp.UDPHolePanchingFinishListener {
        {abstract} + onUDPHolePanchingFinish()
    }
  }
  

  namespace  {
    class temp.domain.application.UDPHolePunchingServer {
        {static} ~ SERVER_PORT : int
        - serverSocket : DatagramSocket
        + onReceiveMsg()
        + onSendFinishMsg()
        + run()
        ~ temp.domain.application.UDPHolePunchingServer()
        - startUDPHoleServerSend()
    }
  }
  

  namespace  {
    class temp.controller.UDPHolePunchingServerReceive {
        ~ datagramSocket : DatagramSocket
        + run()
        ~ temp.controller.UDPHolePunchingServerReceive()
    }
  }
  

  namespace  {
    interface temp.domain.application.UDPHolePunchingServerReceiveListener {
        {abstract} + onReceiveMsg()
    }
  }
  

  namespace  {
    class temp.presenter.UDPHolePunchingServerSend {
        - IPAddress : InetAddress
        - datagramSocket : DatagramSocket
        - port : int
        + run()
        ~ temp.presenter.UDPHolePunchingServerSend()
        - sleep()
    }
  }
  

  namespace  {
    interface temp.domain.application.UDPHolePunchingServerSendListener {
        {abstract} + onSendFinishMsg()
    }
  }
  

  temp.Main .up.|> temp.UDPHolePanchingFinishListener
  temp.domain.application.UDPHolePunchingServer .up.|> temp.domain.application.UDPHolePunchingServerReceiveListener
  temp.domain.application.UDPHolePunchingServer .up.|> temp.domain.application.UDPHolePunchingServerSendListener
  temp.domain.application.UDPHolePunchingServer o-- temp.UDPHolePanchingFinishListener : udpHolePanchingFinishListener
  temp.controller.UDPHolePunchingServerReceive o-- temp.domain.application.UDPHolePunchingServerReceiveListener : udpHolePunchingServerReceiveListener
  temp.presenter.UDPHolePunchingServerSend o-- temp.domain.application.UDPHolePunchingServerSendListener : udpHolePunchingServerSendListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
